objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__CommunityFBDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community FBDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityFBDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community FBDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityNonDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community NonDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityNonDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community NonDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityPBDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community PBDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityPBDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community PBDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Community__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                    <default>true</default>
                    <label>Female</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institutional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Institutional</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this record should be used.</description>
        <inlineHelpText>Whether this record should be used.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Medicaid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Medicaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OriginallyDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Originally Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__YearSpan__c</fullName>
        <label>Year Span</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Score Medicaid Interactions</label>
    <pluralLabel>Risk Score Medicaid Interactions</pluralLabel>
</CustomObject>